--- a/rpc/package.json
+++ b/rpc/package.json
@@ -15,6 +15,7 @@
     "@polkadot/api": "^10.4.1",
     "@polkadot/keyring": "^12.2.1",
     "axios": "^1.6.7",
+    "avail-js-sdk": "^0.1.15",
     "c-kzg": "^2.1.2",
     "class-transformer": "^0.5.1",
     "dotenv": "^16.4.5",
